--- a/modules/Utilities/src/site/markdown/index.md.vm
+++ b/modules/Utilities/src/site/markdown/index.md.vm
@@ -659,6 +659,29 @@ object must be created. It is immediately discarded, as the relevant object is t
 The code in example also demonstrates how to invoke the same code binding to an alternate context `XStreamContext2` that uses a different marshalling
 configuration.
 
+
+#[[###]]# Composite roles
+
+A role can be implemented by referring other roles. For instance, let's introduce two example roles that save/load an object to/from a `Path`:
+
+<!-- MACRO{snippet|id=savable|file=${project.basedir}/../../modules/examples/DciMarshalXStreamExample/src/main/java/it/tidalwave/thesefoolishthings/examples/dci/marshal/role/Savable.java} -->
+
+<!-- MACRO{snippet|id=loadable|file=${project.basedir}/../../modules/examples/DciMarshalXStreamExample/src/main/java/it/tidalwave/thesefoolishthings/examples/dci/marshal/role/Loadable.java} -->
+
+They can be used as follows:
+
+<!-- MACRO{snippet|id=xstreamcontext-savable-loadable|file=${project.basedir}/../../modules/examples/DciMarshalXStreamExample/src/main/java/it/tidalwave/thesefoolishthings/examples/dci/marshal/xstream/DciMarshalXStreamExample.java} -->
+
+We can provide implementations relying upon the `Marshallable` / `Unmarshallable` roles:
+
+<!-- MACRO{snippet|id=marshallablesavable|file=${project.basedir}/../../modules/examples/DciMarshalXStreamExample/src/main/java/it/tidalwave/thesefoolishthings/examples/dci/marshal/role/MarshallableSavable.java} -->
+
+<!-- MACRO{snippet|id=marshallableloadable|file=${project.basedir}/../../modules/examples/DciMarshalXStreamExample/src/main/java/it/tidalwave/thesefoolishthings/examples/dci/marshal/role/MarshallableLoadable.java} -->
+
+As a side note, the role can be applied to any kind of datum, neither requiring that it implements `As` nor by making use of Lombok `ExtensionMethod`:
+`AsSupport` does the trick working as an adapter.
+
+
 #[[###]]# Other notes to expand
 
 The Tell don't Ask principle says that ... It's one of the way we can make our design really strong and resistant to change. Unfortunately a few people use it;
