--- a/modules/Utilities/src/site/markdown/index.md.vm
+++ b/modules/Utilities/src/site/markdown/index.md.vm
@@ -294,12 +294,12 @@ In a complex application it might be convenient to write a number of different `
 can be effectively captured by means of the generalisation-specialisation relationship (even though composition often is a better approach). The ```Finder```
 API doesn't mandate anything in addition of respecting the contract declared in its interface and have an immutable implementation, so one can proceed with
 his favourite design strategy. Anyway the API provides a support class
-```FinderSupport``` which offers the capability of having a completely encapsulated status: that is with all fields ```private``` (rather than
+```HierarchicFinderSupport``` which offers the capability of having a completely encapsulated status: that is with all fields ```private``` (rather than
 ```protected```) and each level of the hierarchy doesn't know anything of the internal status of the others.
 This is a way to mitigate the tight coupling caused by inheritance, so one can make changes to the internal status to a Finder in an intermediate level of
 the hierarchy without forcing the subclasses to be adjusted.
 
-![UML](apidocs/it/tidalwave/util/spi/FinderSupport.svg)
+![UML](apidocs/it/tidalwave/util/spi/HierarchicFinderSupport.svg)
 
 To explain how this works by examples, we are going to show how an implementation of the extended ```Finder``` we introduced in the previous section might be
 done (in-memory, to keep things simpler).
@@ -316,7 +316,7 @@ As it was explained above, intermediate methods must create copies of the ```Fin
 performed by a copy constructor that takes *all the fields*, including those of the superclass(es); but since we decided to make them ```private``` they can't
 be accessed. So all we can do is to call the constructor shown in the above code snippet that only deals with the fields of the current class. Since it calls
 the ```super``` default constructor, this means that **the state of the super class(es) will be reset** to a default: i.e. any change applied by intermediate
-methods implemented in the super class(es) will be lost. Obviously this is not how things are supposed to work: that's why ```FinderSupport``` offers a
+methods implemented in the super class(es) will be lost. Obviously this is not how things are supposed to work: that's why ```HierarchicFinderSupport``` offers a
 ```clonedWithOverride()``` method that fixes everything.
 
 <!-- MACRO{snippet|id=new-methods|file=${project.basedir}/../../modules/examples/ExtendedFinderExample/src/main/java/it/tidalwave/thesefoolishthings/examples/extendedfinderexample/PersonFinderImpl2a.java} -->
@@ -325,7 +325,7 @@ How does it work? It relies on the the presence of a special copy constructor th
 
 <!-- MACRO{snippet|id=clone-constructor|file=${project.basedir}/../../modules/examples/ExtendedFinderExample/src/main/java/it/tidalwave/thesefoolishthings/examples/extendedfinderexample/PersonFinderImpl2a.java} -->
 
-*Note: having this special copy constructor is a requirement of any subclass of ```FinderSupport```. The ```FinderSupport``` constructor makes a runtime check
+*Note: having this special copy constructor is a requirement of any subclass of ```HierarchicFinderSupport```. The ```HierarchicFinderSupport``` constructor makes a runtime check
 by introspection and throws an exception if the proper copy constructor is not found.*
 
 It takes two parameters:
@@ -345,7 +345,7 @@ need to call the ```super()``` constructor to make sure everything is fine (but 
 
 Is it a bit clumsy? Admittedly it is, even though the code is simple and clean: once the concept is clear, it's easy to write a copy constructor for a new
 extended ```Finder```. Part of the clumsiness derives from the complexity of inheritance, that we are trying to work around. If you don't like this approach,
-just forget ```FinderSupport```.
+just forget ```HierarchicFinderSupport```.
 
 #[[####]]# Alternate take
 
@@ -376,21 +376,21 @@ And the methods to specify parameters are:
 
 
 
-#[[###]]# Marginal note to ```FinderSupport```
+#[[###]]# Marginal note to ```HierarchicFinderSupport```
 
 *Note: this part of the API might go away in future: mention that after TFT-262 a Finder implementation only requires results().*
 
-If you decide to implement a ```Finder``` by subclassing ```FinderSupport``` there is an alternative way to implement the termination methods, as they have
+If you decide to implement a ```Finder``` by subclassing ```HierarchicFinderSupport``` there is an alternative way to implement the termination methods, as they have
 default implementations. You can rather implement **either** of these two methods:
 
-<!-- MACRO{snippet|id=computeNeededResults|file=${project.basedir}/../../modules/Utilities/src/main/java/it/tidalwave/util/spi/FinderSupport.java} -->
+<!-- MACRO{snippet|id=computeNeededResults|file=${project.basedir}/../../modules/Utilities/src/main/java/it/tidalwave/util/spi/HierarchicFinderSupport.java} -->
 
 This method is responsible **to produce the final results as they will be returned to the caller**. That is it must respect parameters concerning pagination
 (```from()``` or ```max()```), sorting and such. For instance, if the source is a relational database this method should prepare and execute a SQL query with
 all the relevant clauses (```WHERE```, ```ORDER BY```, ```LIMIT```, etc.). If this method is not overridden, it will call the method shown below and then
 apply pagination and sorting by itself (in memory).
 
-<!-- MACRO{snippet|id=computeResults|file=${project.basedir}/../../modules/Utilities/src/main/java/it/tidalwave/util/spi/FinderSupport.java} -->
+<!-- MACRO{snippet|id=computeResults|file=${project.basedir}/../../modules/Utilities/src/main/java/it/tidalwave/util/spi/HierarchicFinderSupport.java} -->
 
 This method would return **all** the objects of pertinence, without filtering or sorting them; the default implementation of ```computeNeededResults()``` will
 take care of that. Since this implies to work in memory after having loaded/created all the objects, this approach is easier to write but less efficient. It's
